humburgery/frontend/k8s/frontend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fronend
  labels:
    app: fronend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fronend
  template:
    metadata:
      labels:
        app: fronend
    spec:
      containers:
        - name: fronend-container
          image:
          ports:
            - containerPort: 3000
