humburgery/frontend/k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fronend-service
spec:
  selector:
    app: fronend
  ports:
    - port: 3000
      targetPort: 3000
